--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "dev": "cross-env npm run build:server && medusa develop"
   },
   "dependencies": {
-    "@medusajs/admin": "latest",
-    "@medusajs/cache-redis": "latest",
-    "@medusajs/event-bus-local": "latest",
-    "@medusajs/event-bus-redis": "latest",
-    "@medusajs/file-local": "latest",
+    "@medusajs/admin": "^7.1.16",
+    "@medusajs/cache-redis": "^1.9.2",
+    "@medusajs/event-bus-local": "1.9.9",
+    "@medusajs/event-bus-redis": "^1.8.14",
+    "@medusajs/file-local": "1.0.4",
     "@medusajs/icons": "^1.2.1",
-    "@medusajs/medusa": "^1.20.4",
+    "@medusajs/medusa": "^1.20.10",
     "@medusajs/ui": "^2.4.3",
     "@medusajs/utils": "^1.11.8",
     "@tanstack/react-query": "4.22.0",
@@ -40,7 +40,7 @@
     "cors": "^2.8.5",
     "dotenv": "16.3.1",
     "express": "^4.17.2",
-    "medusa-interfaces": "latest",
+    "medusa-interfaces": "1.3.10",
     "prism-react-renderer": "^2.0.4",
     "react-select": "^5.8.0",
     "typeorm": "^0.3.16"
@@ -49,7 +49,7 @@
     "@babel/cli": "^7.14.3",
     "@babel/core": "^7.14.3",
     "@babel/preset-typescript": "^7.21.4",
-    "@medusajs/medusa-cli": "latest",
+    "@medusajs/medusa-cli": "1.3.23",
     "@stdlib/number-float64-base-normalize": "0.0.8",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
@@ -94,5 +94,6 @@
     ],
     "coverageDirectory": "./coverage",
     "testEnvironment": "node"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
